@startuml
left to right direction
class Account {
    + accountID: int
    username: string
    password: string
    phone: string
    email: string
    accountType: string
    role: string
    status: string
    verifyCode: string
    verifyTime: int
    + add()
    + update()
    + login()
    + register()
}

class Customer {
    + customerID: int
    accountID: int
    customerName: string
    phone: string
    + add()
    + update()
    + delete()
}

class Table {
    + tableID: int
    tableName: string
    qrToken: string
        + add()
        + update()
        + delete()
}

class Order {
    + orderID: int
    customerID: int
    tableID: int
    + add()
    + update()
    + delete()
    + totalOrder()
}

class OrderDetail {
    + orderID: int
    + dishID: int
    quantity: int
    + add()
    + update()
    + delete()
    + subTotalOrder()
}

class Option {
    + optionID: int
    dishName: string
    dishPrice: decimal
    + add()
    + update()
    + delete()
}

class OptionGroup {
    + dishID: int
    + optionID: int
    + optionGroupName: string
    + add()
    + update()
    + delete()
}

class Dish {
    + dishID: int
    + dishName: string
    + dishPrice: double
    + add()
    + update()
    + delete()
}

class Recipe {
    + dishID: int
    + IngredientsID: int
    + quantity: int
    + add()
    + update()
    + delete()
}

class Ingredient {
    + ingredientID: int
    + integrientName: string
    + add()
    + update()
    + delete()
}

class Inventory {
    + ingredientID: int
    + quantity: int
}

enum unit <<enumeration>> {
    + l
    + ml
    + g
    + kg
    + pcs
}

Customer   "1" *-- "1"  Account: composition
Customer  "1" o-- "1..*" Order        : has
Table     "1" o-- "0..*" Order        : has

Order     "1" *-- "1..*" OrderDetail  : composition

Option    "1" o-- "0..*" OptionGroup  : has
Dish      "1" o-- "0..*" OptionGroup  : has
Dish       "1" o-- "0..*" OrderDetail  : has

Dish      "1" *-- "0..*" Recipe       : composition
Recipe    "0..*" --> "1" Ingredient   : include

Ingredient "1" o-- "0..*" Inventory   : has
Ingredient -- unit
@enduml